    Delete host (#365)
    Node holding onto client sockets that will be closed (#417)
    Image type icon in images sidebar on LXD 3 host
    Instance memory usage pop-overs overlap
    Server overview leaks all project names (#453)
    Offline host/s breaks background cron jobs (#362)
    Fix encforcing backup retention rules deletes deleted backups

Removed
    Native centos support, could still use SNAP (#457)

API Changes
    Removed `memoryLimit` from CreateVirtualMachineController in favour of config param (#419)
    Image description when searching images now contains html, the plain description is now kept in the key origDescription
    projectGraphData became projectsUsageGraphData when fetching the general dashboard
    stats key was removed fetching the general dashboard
    Drop alias parameter from all controllers
    Add currentProject key when outputting host as JSON
    Don't load / return server "resources" key unless loading server overview
    Don't load / return clustersAndHosts when loading dashboard
    Don't load instances with GetHostOverview
    Load warnings & projectAnalytics with GetHostOverview
    Remove duplicate profiles key from CreateInstance service (internal)
    Remove profile name from deploy cloud-config as its no longer used
    Removed GetAllHostsSchedules class as its no longer needed
    Fetch array of HostObjects changing response keys for GetHostsController

0.13.0 - 18/07/2020

Added
    Setting for storing timezone (#371)
    Support for copying instances between projects (#375)
    Optionally copying profiles when copying instance
    Show image variants when searching images from remotes (#380)
    Support managing instance providers & their types (#395)
    Toggle admin status (#394)
    Toggle login status (#400)

Changed
    Store all dates in UTC (#370)
    Display dates in local browser time (#370)
    Run cron jobs at time specified by timezone setting (#372)

Fixed
    Enforcing backup retention limit